migration java25 + migration junit 6 + update dependences