@@ -1,9 +1,14 @@
 package org.bindgen.inscope;
 
-import junit.framework.TestCase;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-public class PersonTest extends TestCase {
+import java.lang.reflect.InvocationTargetException;
 
+import org.junit.jupiter.api.Test;
+
+public class PersonTest {
+
+	@Test
 	public void testExists() {
 		assertNotNull(this.newInstance(AddressInBinding.class));
 		assertNotNull(this.newInstance(HouseInBinding.class));
@@ -12,12 +17,10 @@ public class PersonTest extends TestCase {
 
 	private Object newInstance(Class<?> type) {
 		try {
-			return type.newInstance();
-		} catch (InstantiationException e) {
-			throw new RuntimeException(e);
-		} catch (IllegalAccessException e) {
+			return type.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			throw new RuntimeException(e);
 		}
-	}
+  }
 
 }
